fixed arrow cutoff bug

--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -196,7 +196,14 @@
     }
 
 }
-
+@media (max-height: 825px) {
+    .arrow-wrap {
+        display: none !important;
+    }
+    .arrow {
+        display: none !important;
+    }
+}
 #hero {
   background: black;
 }
